Fix appshell gap

--- a/app/_components/AppContainer/styles.module.css
+++ b/app/_components/AppContainer/styles.module.css
@@ -26,7 +26,6 @@
 
 .headerContainer {
     height: 100%;
-    width: 100vw;
 }
 
 .headerLeft {
